--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-grab-screens",
+  "name": "mongo-puppeteer",
   "version": "0.0.1",
   "description": "Grab screenshots of websites using headless chrome",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/harsha-bhat/node-grab-screens.git"
+    "url": "git+https://github.com/harsha-bhat/mongo-puppeteer.git"
   },
   "keywords": [
     "chrome",
@@ -18,9 +18,9 @@
   "author": "Harsha Bhat",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/harsha-bhat/node-grab-screens/issues"
+    "url": "https://github.com/harsha-bhat/mongo-puppeteer/issues"
   },
-  "homepage": "https://github.com/harsha-bhat/node-grab-screens#readme",
+  "homepage": "https://github.com/harsha-bhat/mongo-puppeteer#readme",
   "dependencies": {
     "mongoose": "^5.3.3",
     "puppeteer": "^1.9.0"
